fixes ContextualNav alignment

--- a/src/components/PageSections/ContextualNav/_ContextualNav.scss
+++ b/src/components/PageSections/ContextualNav/_ContextualNav.scss
@@ -11,6 +11,7 @@
 .coa-ContextualNav__container {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .coa-ContextualNav__parent {
